Cloud Build 4 terraform-cloud

--- a/3_infraestructura_escalable/pipelines/manifests/grafana/skaffold.yaml
+++ b/3_infraestructura_escalable/pipelines/manifests/grafana/skaffold.yaml
@@ -1,9 +1,9 @@
 apiVersion: skaffold/v2beta27
 kind: Config
 metadata:
-  name: pipelines
+  name: grafana
 deploy:
   kubectl:
     manifests:
-    - grafana.yaml
     - grafana-ingress.yaml
+    - grafana.yaml
